# oci-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
server/: config.py  main.py  tools.py
tests/: test_tools.py
