[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oci-mcp"
version = "0.1.0"
description = "MCP server exposing the OC Real Estate Intel agent as a tool. Lets Claude Desktop / Claude Code query Orange County parcels by address, APN, owner, or natural language — answers grounded by the deployed LangGraph supervisor, citations + Langfuse trace IDs surfaced back to the caller."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Danh Le", email = "dtle82@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "anthropic",
    "langgraph",
    "real-estate",
    "orange-county",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
oci-mcp = "server.main:main"

[project.urls]
Homepage = "https://github.com/odanree/oci-mcp"
Repository = "https://github.com/odanree/oci-mcp"
Upstream = "https://github.com/odanree/oc-realestate-intel"
"Live demo" = "https://oci.danhle.net"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
